duniverse/menhirLib.20200211/test/static/bad/lowercase-token.mly
%token bla
%token FOO

%%

prod:
  x = X
    { () }

