duniverse/menhirLib.20200211/test/static/bad/lowercase-token.exp
File "lowercase-token.mly", line 1, characters 7-10:
Error: syntax error after '%token' and before 'bla'.
Ill-formed '%token' declaration.
Examples of well-formed declarations:
  %token FOO
  %token BAR "|"
  %token DOT "." SEMICOLON ";"
  %token <string> LID UID
  %token FOO [@cost 0]
